# Lamina_BigNum

./: .gitignore  CMakeLists.txt  README.md  Test.cpp  Test.hpp  demo.py  main.cpp  setup.py
doc/: 一个简单的文档.md
examples/: biginteger_examples.py  rational_examples.py
include/lammp/: alloc.h  alloc.hpp  base_cal.hpp  integer.hpp  inter_buffer.hpp  lammp.hpp  lampz.h  mont64_div64.hpp  num_theo.hpp  numeral_table.h  spe_int.hpp  uint128.hpp  uint192.hpp
include/test/: Test.hpp
lamina_bignum/: __init__.py  arbitraryfloat.py  biginteger.py  fixedpoint.py  rational.py
new_project/: CMakeLists.txt  Test.cpp  Test.hpp  main.cpp
new_project/src/: BigFrac.cpp  BigInt.cpp  BigInt.hpp  lammp.hpp
src/: BigFrac.cpp  BigFrac.hpp  BigInt.cpp  BigInt.hpp  hint.hpp
src/lammp/Alloc/: default_alloc.cpp
src/lammp/Arithmetic/Numeral/: numeral.cpp
src/lammp/Arithmetic/add_sub/: add_sub.cpp
src/lammp/Arithmetic/bit/: bit.inl
src/lammp/Arithmetic/div/: barrett.cpp  classic.cpp  div_supp.inl
src/lammp/Arithmetic/mul/: classic.cpp  karatsuba.cpp  mul64.cpp  ntt.cpp
src/lammp/Arithmetic/shr/: shr.cpp
src/lammp/base_cal/: bits.inl  carry.inl  u128.inl
src/lammp/bits/: bits.inl  u128.inl
src/lammp/getlen/: getlen.inl
src/lammp/integer/: montint.inl  uint128.inl  uint192.inl
src/lammp/lampz/: add.cpp  add_sub.cpp  init.cpp  mul.cpp  str.cpp
src/test/: Test.cpp
